--- a/index.qmd
+++ b/index.qmd
@@ -103,7 +103,7 @@ library(pglm)
 
 -   I am aiming for an interactive seminar format, which will require either your participation or your sitting next to someone who is participating.
 
--   Hopefully you came with your laptop, the Firefox browser, R/RStudio, and a the suggested libraries installed (if you have your laptop you can do this now if you didn't get the memo).
+-   Hopefully you came with your laptop, the Firefox browser, R/RStudio, and the suggested libraries installed (if you have your laptop you can do this now if you didn't get the [memo](https://jeffreyracine.github.io/bk/prelim.html)).
 
 -   If you have R/RStudio and the libraries installed, you can work with the methods and data interactively as the talk proceeds.
 
@@ -111,7 +111,7 @@ library(pglm)
 
 -   Let's begin by opening the following link in Firefox:
 
-    [https://jeffreyracine.github.io/bk](https://jeffreyracine.github.io/bk)
+    <https://jeffreyracine.github.io/bk>
 
 ## Overview of Talk
 
@@ -123,10 +123,10 @@ library(pglm)
     4.  Conditional density estimation, bandwidth and polynomial order selection
     5.  Conditional density estimation, bandwidth and polynomial order selection with/without bounded data
     6.  Theoretical underpinnings, uniform consistency results, pointwise, Bonferroni, and simultaneous confidence intervals
-    
+
 -   An R package is available at:
 
-    [https://github.com/JeffreyRacine/bkcde](https://github.com/JeffreyRacine/bkcde)
+    <https://github.com/JeffreyRacine/bkcde>
 
 # Unconditional Density Estimation with Bounded Data
 
@@ -134,11 +134,9 @@ library(pglm)
 
 -   Kernel density estimation has a rich history [@ROSENBLATT:1956; @PARZEN:1962]
 
--   Assuming smoothness, an unknown density $f(x)$ can be estimated using a local average of weight (kernel) functions,
-    \begin{equation*}
+-   Assuming smoothness, an unknown density $f(x)$ can be estimated using a local average of weight ("kernel") functions, \begin{equation*}
     \hat f(x)=\frac{1}{n}\sum_{i=1}^n \frac{1}{h}K\left(\frac{x-X_i}{h}\right),
-    \end{equation*}
-    where $K(\cdot)$ is a kernel function, $h$ is a bandwidth, and $X_i$ are the data
+    \end{equation*} where $K(\cdot)$ is a kernel function, $h$ is a bandwidth, and $X_i$ are the data
 
 <!-- -   For consistency we typically require the bandwidth to vanish asymptotically ($h\to 0$ as $n\to\infty$) -->
 
@@ -146,9 +144,11 @@ library(pglm)
 
 -   This artifact is known as the "edge" or "boundary" effect
 
+-   Let's examine this feature via some interactive illustrations
+
 ## Example of KDE with Bounded Data - Boundary Bias
 
-We simulate two datasets, one $N(0,1)$ and one $U[0,1]$, and use data-driven methods of bandwidth selection with a "classical" Gaussian kernel.
+We simulate two datasets, one $N(0,1)$ and one $U[0,1]$, and use data-driven methods of bandwidth selection with a "classical" Gaussian kernel to estimate unknown smooth densities, $f(x)$
 
 ::: {.callout-note appearance="simple"}
 ## Example ($N(0,1)$ (left figure), $U{[0,1]}$ (right figure), R function density())
@@ -216,7 +216,7 @@ rug(x)
 -   Gamma kenels ($x\in[a,\infty]$, $|a|<\infty$) [@CHEN:2000; @MALEC201457]
 
 -   Inverse and Reciprocal Inverse Gaussian kernels ($x\in[a,b]$, $|a|<\infty$, $|b|<\infty$, $a<b$) [@SCAILLET:2004; @IGARASHI_KAKIZAWA:2014]
-    
+
 -   A more recent addition is the Gaussian kernel ($x\in[a,b]$, $|a|\le\infty$, $|b|\le\infty$, $a<b$) of @RACINE_LI_WANG:2024
 
 ## KDE with Bounded Data - A Priori Information
@@ -258,7 +258,7 @@ rug(x)
 -->
 ```
 
--   The key to this kernel formulation lies in its *adaptability*: 
+-   The key to this kernel formulation lies in its *adaptability*:
 
     -   If $K(z)$ has infinite support then $K_{[a,b]}(z)$ *seamlessly admits infinite support situations without modification* (i.e., $[a,b]=[-\infty,\infty]$, $[a,b]=[-\infty,b_0]$, $[a,b]=[a_0,\infty]$, $[a,b]=[a_0,b_0]$ for $|a_0|<\infty$ and $|b_0|<\infty$, $a_0<b_0$)
     -   If the bounds are unknown, the kernel can *automatically adapt* to the range of the data
@@ -335,7 +335,7 @@ rug(x)
 
 -   The conditional PDF $f(y|x)=f(y,x)/f(x)$ is a fundamental object in statistics
 
--   Related objects include 
+-   Related objects include
 
     -   The conditional CDF $F(y|x)=\int_{-\infty}^y f(t|x)dt=\int_{-\infty}^y f(t,x)dt/f(x)$
     -   The conditional expectation $E(Y|X=x)=\int_{-\infty}^{\infty} yf(y|x)dy$
@@ -383,7 +383,7 @@ rug(x)
 
 ## Conditional KDE - Bandwidth Selection
 
--   Classical least squares cross-validation is a fully automatic and data-driven method of selecting the bandwidth  with $Y\in[-\infty,\infty]$ and fixed polynomial order [@RUDEMO:1982; @BOWMAN:1984; @HALL_RACINE_LI:2004]
+-   Classical least squares cross-validation is a fully automatic and data-driven method of selecting the bandwidth with $Y\in[-\infty,\infty]$ and fixed polynomial order [@RUDEMO:1982; @BOWMAN:1984; @HALL_RACINE_LI:2004]
 
 -   This method is based on the principle of selecting a bandwidth that minimizes the integrated square error (ISE($h_x$,$h_y$) of the resulting estimate
 
@@ -393,7 +393,7 @@ rug(x)
 
 -   The third term can be ignored since it does not depend on $h_x$ or $h_y$
 
--   Replacing the first two terms with their sample counterparts and adjusting for bias, we can minimize ISE($h_x$,$h_y$) with respect to $h_x$ and $h_y$ 
+-   Replacing the first two terms with their sample counterparts and adjusting for bias, we can minimize ISE($h_x$,$h_y$) with respect to $h_x$ and $h_y$
 
 ## Conditional KDE - Bandwidth and Order Selection
 
@@ -415,7 +415,7 @@ rug(x)
 
 -   The local polynomial estimator using the boundary adaptive kernel $K_{[a,b]}(z_y)$ is $\hat\alpha_0=\hat f(y|x)$ from the solution of \begin{equation*}
     \hat \alpha = \operatorname{argmin}_{\alpha}\sum_{i=1}^n\left(h_y^{-1}K_{[a,b]}\left(\frac{Y_i-y}{h_y}\right)-\sum_{j=0}^p\alpha_j(x-X_i)^j\right)^2h_x^{-1}K\left(\frac{X_i-x}{h_x}\right)
-    \end{equation*} 
+    \end{equation*}
 
 -   We minimize ISE($p$, $h_x$,$h_y$) with known bounds $a$ and $b$ or unknown bounds using the empirical support $[\hat a,\hat b]=[\min(Y),\max(Y)]$
 
@@ -638,7 +638,7 @@ plot(f.bkcde,x.eval=seq(min(x),max(x),length=25),y.eval=seq(min(y),100,length=25
 
 ## Simulation Details
 
--   The proposed approach uses the empirical support of $Y$  $[\min(Y),\max(Y)]$ for the boundary kernel (we *don't* assume bounds $[a,b]$ are known a-priori)
+-   The proposed approach uses the empirical support of $Y$ $[\min(Y),\max(Y)]$ for the boundary kernel (we *don't* assume bounds $[a,b]$ are known a-priori)
 
 -   For the Beta distribution, the true bounds are $[0,1]$
 
@@ -845,7 +845,7 @@ rmse.norm.ls.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)]
 
 ```
 
-## Candidate Model Comparison:  Beta DGP
+## Candidate Model Comparison: Beta DGP
 
 -   We conduct Monte Carlo simulations and report the median relative RMSE of fixed polynomial estimators and the polynomial adaptive approach (PA).
 
@@ -879,7 +879,7 @@ rmse.norm.ls.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)]
       row_spec(4, bold = T, color = "lightgreen") %>%
       column_spec(c(2,8), bold = T, color = "green")
     ```
-    
+
     ### $B(1+x^2,2-x^2)$ ML
 
     ```{r}
@@ -907,7 +907,7 @@ rmse.norm.ls.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)]
     ```
     :::
 
-## Candidate Model Comparison:  Gaussian DGP
+## Candidate Model Comparison: Gaussian DGP
 
 -   We conduct Monte Carlo simulations and report the median relative RMSE of fixed polynomial estimators and the polynomial adaptive approach (PA).
 
@@ -954,7 +954,7 @@ rmse.norm.ls.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)]
       row_spec(4, bold = T, color = "lightgreen") %>%
       column_spec(c(4,8), bold = T, color = "green")
     ```
-    
+
     ### $N(x^2,1/12)$ LS
 
     ```{r}
@@ -968,7 +968,6 @@ rmse.norm.ls.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:(p.max+3)]
       column_spec(c(4,8), bold = T, color = "green")
     ```
     :::
-   
 
 # Scale Factor Summaries
 
@@ -1283,7 +1282,6 @@ kable(sf.beta.cvml.irr,col.names=c("n","sf-y","sf-x","sf-y","sf-x","sf-y","sf-x"
 add_header_above(c(" "=1, "BKPA" = 2, "HRL" = 2, "FYT" = 2))
 ```
 
-
 ### $B(1,2)$ LS
 
 ```{r}
@@ -1304,7 +1302,7 @@ kable(sf.beta.cvml.quad,col.names=c("n","sf-y","sf-x","sf-y","sf-x","sf-y","sf-x
 add_header_above(c(" "=1, "BKPA" = 2, "HRL" = 2, "FYT" = 2))
 ```
 
-### $B(1+x^2,2-x^2)$  LS
+### $B(1+x^2,2-x^2)$ LS
 
 ```{r}
 #| echo: false
@@ -1313,7 +1311,6 @@ add_header_above(c(" "=1, "BKPA" = 2, "HRL" = 2, "FYT" = 2))
 kable(sf.beta.cvls.quad,col.names=c("n","sf-y","sf-x","sf-y","sf-x","sf-y","sf-x"), digits=2,align='r')  %>%
 add_header_above(c(" "=1, "BKPA" = 2, "HRL" = 2, "FYT" = 2))
 ```
-
 :::
 
 ## Scale Factor Summaries: Gaussian DGP
@@ -1321,7 +1318,6 @@ add_header_above(c(" "=1, "BKPA" = 2, "HRL" = 2, "FYT" = 2))
 The "scale factor" $s$ is an unknown constant that, adjusted for the sample size and data scale, related to the "bandwidth" $h$, i.e., $h_x=s_x\sigma_x/n^{1/6}$ and $h_y=s_y\sigma_y/n^{1/6}$, where $n$ is the sample size. The scale factor is estimated by optimizing the cross-validation score. The scale factor summaries below show the median scale factor for the three methods: BKPA, HRL, and FYT, and are presented for the irrelevant $x$ and quadratic $x$ DGPs.
 
 ::: panel-tabset
-
 ### $N(0,1/12)$ ML
 
 ```{r}
@@ -1361,11 +1357,10 @@ add_header_above(c(" "=1, "BKPA" = 2, "HRL" = 2, "FYT" = 2))
 kable(sf.norm.cvls.quad,col.names=c("n","sf-y","sf-x","sf-y","sf-x","sf-y","sf-x"), digits=2,align='r')  %>%
 add_header_above(c(" "=1, "BKPA" = 2, "HRL" = 2, "FYT" = 2))
 ```
-
 :::
 
-# Comparison with HRL and FYT   
-    
+# Comparison with HRL and FYT
+
 ```{r}
 #| echo: false
 #| cache: false
@@ -1462,7 +1457,7 @@ median.dat <- rbind(c(scan("../work_quad_empirical_bounds/3D_cvls/norm/n_100/n.d
 rmse.comp.norm.ls.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:4], 1, median.dat[,2,drop=FALSE], FUN = '/'),format="f",digits=2))
     
 ```
-    
+
 ## Comparison with HRL and FYT: Beta DGP
 
 -   We compare the performance of the proposed method using empirical bounds with the methods of @HALL_RACINE_LI:2004 and @fyt:1996, which use a classical kernel presuming infinite support (inappropriate for the Beta).
@@ -1479,7 +1474,7 @@ rmse.comp.norm.ls.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:4], 1
     #| tbl-cap: Median Relative RMSE Irrelevant ML
     kable(rmse.comp.beta.ml.irr, col.names=c("n","BKPA","HLR","FYT"), digits=2,align='r')    
     ```
-    
+
     ### $B(1,2)$ LS
 
     ```{r}
@@ -1488,7 +1483,7 @@ rmse.comp.norm.ls.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:4], 1
     #| label: tbl-beta-cv-ls-irr
     #| tbl-cap: Median Relative RMSE Irrelevant LS
     kable(rmse.comp.beta.ls.irr, col.names=c("n","BKPA","HLR","FYT"), digits=2,align='r')    
-    ```    
+    ```
 
     ### $B(1+x^2,2-x^2)$ ML
 
@@ -1528,7 +1523,7 @@ rmse.comp.norm.ls.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:4], 1
     #| tbl-cap: Median Relative RMSE Irrelevant ML
     kable(rmse.comp.norm.ml.irr, col.names=c("n","BKPA","HLR","FYT"), digits=2,align='r')    
     ```
-    
+
     ### $N(0,1/12)$ LS
 
     ```{r}
@@ -1537,7 +1532,7 @@ rmse.comp.norm.ls.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:4], 1
     #| label: tbl-norm-cv-ls-irr
     #| tbl-cap: Median Relative RMSE Irrelevant LS
     kable(rmse.comp.norm.ls.irr, col.names=c("n","BKPA","HLR","FYT"), digits=2,align='r')    
-    ```    
+    ```
 
     ### $N(x^2,1/12)$ ML
 
@@ -1549,7 +1544,6 @@ rmse.comp.norm.ls.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:4], 1
     kable(rmse.comp.norm.ml.quad, col.names=c("n","BKPA","HLR","FYT"), digits=2,align='r')
     ```
 
-
     ### $N(x^2,1/12)$ LS
 
     ```{r}
@@ -1560,6 +1554,5 @@ rmse.comp.norm.ls.quad <- cbind(median.dat[,1],formatC(sweep(median.dat[,2:4], 1
     kable(rmse.comp.norm.ls.quad, col.names=c("n","BKPA","HLR","FYT"), digits=2,align='r')
     ```
     :::
-
 
 ## References (scrollable) {.allowframebreaks}
