--- a/index.bib
+++ b/index.bib
@@ -176,6 +176,22 @@ number = {1},
 pages = {81-104},
 year  = {2010}}
 
+@ARTICLE{KIEFER_RACINE:2015,
+  AUTHOR = "Kiefer, N.\ M.\ and J.\ S.\ Racine",
+  TITLE = "The Smooth Colonel and the Reverend Find Common Ground",
+  JOURNAL = " Econometric Reviews",
+  VOLUME = " ",
+  YEAR = "2015",
+  PAGES = "(forthcoming)"}
+ 
+@ARTICLE{KIEFER_RACINE:2009,
+  AUTHOR = "Kiefer, N.\ M.\ and J.\ S.\ Racine",
+  TITLE = "The Smooth Colonel Meets the Reverend",
+  JOURNAL = "Journal of Nonparametric Statistics",
+  VOLUME = "21",
+  YEAR = "2009",
+  PAGES = "521--533"}
+
 @article{SCAILLET:2004,
 author = { O.   Scaillet },
 title = {Density estimation using inverse and reciprocal inverse Gaussian kernels},
